<resources>
    <string name="app_name">Данетки</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="offline_mode">Офлайн режим</string>
    <string name="online_mode">Онлайн режим</string>
    <string name="send_situation">Отправить данетку</string>
    <string name="rules">Правила</string>
    <string name="about">О программе</string>
    <string name="rules_desc">Игра в ситуации (называемые иногда также "данетки")
        относится к тем играм, в которые можно играть где угодно и в любом составе. Смысл игры очень простой.
        Ведущий сообщает остальным участникам некоторую ситуацию. Обычно она кажется противоестественной.
        Участники могут задавать ведущему вопросы типа "да/нет". Ведущий может давать 4 различных ответа:
        "да", "нет", "не имеет значения", "некорректный вопрос". При помощи таких вопросов игроки должны разгадать ситуацию,
        т.е. полностью восстановить происшедшие события и разрешить имеющийся (как правило) в условии парадокс.
</string>
    <string name="login">Войти</string>
    <string name="registartion">Зарегистрироваться</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="username">Имя пользователя</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="correct_answer">Правильный ответ</string>
    <string name="dmatter">Не имеет значения</string>
</resources>
