<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/main_menu">
        <item
            android:id="@+id/nav_offline"
            android:icon="@drawable/ic_person_24dp"
            android:title="@string/offline_mode" />
        <item
            android:id="@+id/nav_online"
            android:icon="@drawable/ic_people_24dp"
            android:title="@string/online_mode" />
        <item
            android:id="@+id/nav_send_situation"
            android:icon="@drawable/ic_send_24dp"
            android:title="@string/send_situation" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/other_menu">
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_rules_24dp"
            android:title="@string/rules" />
    </group>


</menu>