<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBackground"
    android:orientation="horizontal"
    android:padding="15dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorIcons"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorIcons"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />


        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eceef1"
            android:text="@string/login"
            android:textColor="#45a3d1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#0000"
            android:padding="20dp"
            android:text="@string/registartion"
            android:textColor="@color/registationButtonColor"
            android:textSize="16sp" />

        <TextView
            android:text="Или войти с помощью Google"
            android:layout_width="wrap_content"
            android:textColor="@color/colorIcons"
            android:padding="5dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>