<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="Levrite"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:text="Самолёт стоял на земле?"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/answer_solutions_linear_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider" />

                <TextView
                    android:paddingBottom="5dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:layout_gravity="right"
                    android:text="Ожидает решения"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_solutions"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chooser_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider" />

                    <TextView
                        android:id="@+id/yesButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="7dp"
                        android:clickable="true"
                        android:text="@string/yes"
                        android:textColor="@color/yes"
                        android:background="?attr/selectableItemBackground"
                        android:textSize="@dimen/button_answer_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider" />

                    <TextView
                        android:id="@+id/dMetterButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="7dp"
                        android:clickable="true"
                        android:text="@string/dmatter"
                        android:textColor="@color/dmatter"
                        android:background="?attr/selectableItemBackground"
                        android:textSize="@dimen/button_answer_size" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider" />
                    <TextView
                        android:id="@+id/noButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:clickable="true"
                        android:padding="7dp"
                        android:text="@string/no"
                        android:textColor="@color/no"
                        android:background="?attr/selectableItemBackground"
                        android:textSize="@dimen/button_answer_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider" />

                    <TextView
                        android:background="?attr/selectableItemBackground"
                        android:id="@+id/correctButton"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/correct_answer"
                        android:textColor="@color/correct"
                        android:textSize="@dimen/button_answer_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>